completed display exercise

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CSS Layout Exercises | display property</title>
-  <meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
+  <head>
+    <title>CSS Layout Exercises | display property</title>
+    <meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
 
-  <!-- fonts  -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- fonts  -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <!-- reset -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <!-- reset -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-  <!-- your styles will go in display-page.css -->
-  <link rel="stylesheet" type="text/css" href="styles/display-page.css">
-</head>
-<body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
-</body>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <!-- your styles will go in display-page.css -->
+    <link rel="stylesheet" type="text/css" href="styles/display-page.css">
+  </head>
+  <body>
+    <!-- Main element defines larger box.  Div class "top" is for the top row and "bottom for the bottom row.  Numbers allow individual divs to be styled. -->
+
+
+    <main>
+
+      <div class="top one"></div>
+      <div class="top two"></div>
+      <div class="bottom three"></div>
+      <div class="bottom four"></div>
+      <div class="bottom five"></div>
+
+
+    </main>
+
+
+
+  </body>
 </html>
