--- a/display-exercise.html
+++ b/display-exercise.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
 
     <!-- fonts  -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
 
     <!-- reset -->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css"/>
 
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
     <!-- your styles will go in display-page.css -->
-    <link rel="stylesheet" type="text/css" href="styles/display-page.css">
+    <link rel="stylesheet" type="text/css" href="styles/display-page.css"/>
   </head>
   <body>
     <!-- Main element defines larger box.  Div class "top" is for the top row and "bottom for the bottom row.  Numbers allow individual divs to be styled. -->
