--- a/position-exercise.html
+++ b/position-exercise.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CSS Layout Exercises | position property</title>
-  <meta charset="utf-8" name="description" content="Layout exercise on `position` property for Thinkful's front end web development course">
+  <head>
+    <title>CSS Layout Exercises | position property</title>
+    <meta charset="utf-8" name="description" content="Layout exercise on `position` property for Thinkful's front end web development course">
 
-  <!-- fonts  -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- fonts  -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
 
-  <!-- reset -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <!-- reset -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css"/>
 
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
 
-  <!-- your styles go in position-page.css -->
-  <link rel="stylesheet" type="text/css" href="styles/position-page.css">
-</head>
-<body>
-  <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
-  <nav>
-    <img src="images/icon.png">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="display-exercise.html">display</a></li>
-      <li><a href="float-exercise.html">float</a></li>
-    </ul>
-  </nav>
+    <!-- your styles go in position-page.css -->
+    <link rel="stylesheet" type="text/css" href="styles/position-page.css">
+  </head>
+  <body>
+    <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
+    <nav>
+      <img src="images/icon.png">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="display-exercise.html">display</a></li>
+        <li><a href="float-exercise.html">float</a></li>
+      </ul>
+    </nav>
+    
+<!--Creates box with two images-->
 
-  <main>
-    <!-- Put the HTML you need to accomplish the design -->
-  </main>
-</body>
+    <main>
+      <div class="box">
+        <img class="cat" src="images/spacecat.png" alt="">
+        <img class="dog" src="images/spacedog.png" alt="">
+      </div>
+    </main>
+  </body>
 </html>
